add light and dark buttons with jQuery
Co-authored-by: Kevin Davis <thekidnamedkd@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,17 @@ img {
   margin-right: auto;
   width: 40%;
 }
+
+.light-background {
+  background-color: grey;
+  color: black;
+}
+
+.dark-background {
+  background-color: black;
+  color: whitesmoke;
+}
+
+button {
+  color: black;
+}
