add hover feature to paragraph
Co-authored-by: Kevin Davis <thekidnamedkd@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ button {
   color: black;
 }
 
+.paragraph:hover {
+  color: blue;
+}
+
 .highlight {
   background-color: yellow;
   border: 5px black solid;
